--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -36,7 +36,7 @@ jobs:
           go run ./... -validate
 
   golangci-lint-helm-gen:
-    uses: hashicorp/consul-k8s/.github/workflows/reusable-golangci-lint.yml@crt-build-and-tests
+    uses: hashicorp/consul-k8s/.github/workflows/reusable-golangci-lint.yml@main
     with:
       directory: hack/helm-reference-gen
       go-version: 1.17.2
@@ -45,7 +45,7 @@ jobs:
 
   unit-helm-gen:
     needs: [golangci-lint-helm-gen, validate-helm-gen]
-    uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@crt-build-and-tests
+    uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@main
     with:
       directory: hack/helm-reference-gen
       go-version: 1.17.2
@@ -82,7 +82,7 @@ jobs:
         run: go run hack/lint-api-new-client/main.go
 
   golangci-lint-control-plane:
-    uses: hashicorp/consul-k8s/.github/workflows/reusable-golangci-lint.yml@crt-build-and-tests
+    uses: hashicorp/consul-k8s/.github/workflows/reusable-golangci-lint.yml@main
     with:
       directory: control-plane
       go-version: 1.17.2
@@ -219,27 +219,27 @@ jobs:
           path: control-plane/consul-k8s_${{ matrix.goos }}_${{ matrix.goarch }}.zip
 
   golangci-lint-acceptance:
-    uses: hashicorp/consul-k8s/.github/workflows/reusable-golangci-lint.yml@crt-build-and-tests
+    uses: hashicorp/consul-k8s/.github/workflows/reusable-golangci-lint.yml@main
     with:
       directory:  acceptance 
       go-version: 1.17.2 
 
   unit-acceptance-framework:
     needs: golangci-lint-acceptance
-    uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@crt-build-and-tests
+    uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@main
     with:
       directory: acceptance/framework
       go-version: 1.17.2
 
   golangci-lint-cli:
-    uses: hashicorp/consul-k8s/.github/workflows/reusable-golangci-lint.yml@crt-build-and-tests
+    uses: hashicorp/consul-k8s/.github/workflows/reusable-golangci-lint.yml@main
     with:
       directory: cli 
       go-version: 1.17.2
 
   unit-cli:
     needs: golangci-lint-cli
-    uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@crt-build-and-tests
+    uses: hashicorp/consul-k8s/.github/workflows/reusable-unit.yml@main
     with:
       directory: cli 
       go-version: 1.17.2
@@ -274,7 +274,7 @@ jobs:
 #  acceptance-tproxy:
 #    needs: [unit-cli, dev-upload-docker, unit-acceptance-framework, unit-test-helm-templates]
 #    needs: dev-upload-docker
-#    uses: hashicorp/consul-k8s/.github/workflows/reusable-acceptance.yml@crt-build-and-tests
+#    uses: hashicorp/consul-k8s/.github/workflows/reusable-acceptance.yml@main
 #    with:
 #      name: acceptance-tproxy
 #      directory: acceptance/tests
@@ -287,7 +287,7 @@ jobs:
 #  acceptance:
 #    #needs: [unit-cli, dev-upload-docker, unit-acceptance-framework, unit-test-helm-templates]
 #    needs: dev-upload-docker
-#    uses: hashicorp/consul-k8s/.github/workflows/reusable-acceptance.yml@crt-build-and-tests
+#    uses: hashicorp/consul-k8s/.github/workflows/reusable-acceptance.yml@main
 #    with:
 #      name: acceptance
 #      directory: acceptance/tests
